# fm

./: package.json  pnpm-lock.yaml  tsconfig.json
src/: App.tsx  Header.tsx  ListView.tsx  SettingsMenu.tsx  UserDirs.tsx  createHistory.ts  index.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/filesystem/: api.rs  mod.rs  objects.rs  utils.rs
src/components/: ContextMenuProvider.tsx  DialogProvider.tsx  SettingsMenu.tsx
src/styles/: ContextMenu.css  Dialog.css  DropdownMenu.css  index.css  reset.css
