[package]
name = "fm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "cli", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories-next = "2.0.0"
mime_guess = "2.0.4"
open = "5.1.2"
sysinfo = "0.30.12"
trash = "4.1.1"
normpath = "1.2.0"
fs_extra = "1.3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
